闭环渲染入口与蓝图界面 / close rendering entry and blueprint UI