@@ -3,23 +3,23 @@ package com.rtsbuilding.rtsbuilding.client.screen.blueprint;
 import com.rtsbuilding.rtsbuilding.client.controller.ClientRtsController;
 import com.rtsbuilding.rtsbuilding.client.record.FluidEntry;
 import com.rtsbuilding.rtsbuilding.common.blueprint.model.RtsBlueprint;
+import com.rtsbuilding.rtsbuilding.common.blueprint.model.RtsBlueprintBlock;
 import com.rtsbuilding.rtsbuilding.uicore.blueprint.BlueprintMaterialUiState;
+import net.minecraft.block.material.Material;
 import net.minecraft.client.Minecraft;
-import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.tags.FluidTags;
-import net.minecraft.util.Mth;
-import net.minecraft.world.item.Item;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.Items;
-import net.minecraft.world.level.material.Fluid;
-import net.minecraft.world.level.material.Fluids;
-import net.neoforged.neoforge.fluids.FluidType;
+import net.minecraft.init.Items;
+import net.minecraft.item.Item;
+import net.minecraft.item.ItemStack;
+import net.minecraft.util.ResourceLocation;
+import net.minecraftforge.fluids.Fluid;
+import net.minecraftforge.fluids.FluidRegistry;
+import net.minecraftforge.fml.common.registry.ForgeRegistries;
 
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Collections;
 
 import static com.rtsbuilding.rtsbuilding.client.screen.blueprint.BlueprintPanelUi.text;
 
@@ -54,13 +54,13 @@ final class BlueprintMaterialInspector {
         for (Map.Entry<ResourceLocation, Integer> material : entry.requiredItems().entrySet()) {
             String itemId = material.getKey().toString();
             int required = Math.max(0, material.getValue());
-            if (!BuiltInRegistries.ITEM.containsKey(material.getKey())) {
+            if (!ForgeRegistries.ITEMS.containsKey(material.getKey())) {
                 continue;
             }
-            Item item = BuiltInRegistries.ITEM.get(material.getKey());
+            Item item = ForgeRegistries.ITEMS.getValue(material.getKey());
             long available = availableItemCount(controller, itemId, item);
             ItemStack stack = new ItemStack(item);
-            out.add(new MaterialLine(stack, stack.getHoverName().getString(), displayAvailable(available, required), required));
+            out.add(new MaterialLine(stack, stack.getDisplayName(), displayAvailable(available, required), required));
         }
         addFluidLines(out, entry, controller);
         return out;
@@ -68,7 +68,7 @@ final class BlueprintMaterialInspector {
 
     static List<UnsupportedLine> unsupportedBlockLines(BlueprintEntry entry) {
         if (entry == null || entry.unsupportedBlocks().isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
         List<UnsupportedLine> out = new ArrayList<>();
         for (Map.Entry<String, Integer> entryLine : entry.unsupportedBlocks().entrySet()) {
@@ -79,7 +79,7 @@ final class BlueprintMaterialInspector {
 
     static List<MissingBlueprintBlockLine> missingBlueprintBlockLines(BlueprintEntry entry) {
         if (entry == null || entry.missingBlueprintBlocks().isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
         List<MissingBlueprintBlockLine> out = new ArrayList<>();
         for (Map.Entry<String, Integer> entryLine : entry.missingBlueprintBlocks().entrySet()) {
@@ -121,7 +121,7 @@ final class BlueprintMaterialInspector {
     }
 
     static BuildStats buildStats(BlueprintEntry entry, ClientRtsController controller) {
-        if (entry == null || !entry.error().isBlank()) {
+        if (entry == null || !entry.error().trim().isEmpty()) {
             return new BuildStats(0, 0, 0, 0, 0, 0);
         }
         int total = Math.max(0, entry.blockCount());
@@ -132,14 +132,14 @@ final class BlueprintMaterialInspector {
         int missingBlockCount = missingBlueprintBlockCount(entry);
         if (isCreativePlayer()) {
             int buildable = Math.max(0, total - missingBlockCount);
-            int percent = (int) Mth.clamp(buildable * 100L / total, 0L, 100L);
+            int percent = clampPercent(buildable * 100L / total);
             return new BuildStats(percent, buildable, total, 0, 0, missingBlockTypes);
         }
         long buildable = buildableBlockCount(entry, controller);
         int missingTypes = 0;
         for (Map.Entry<ResourceLocation, Integer> material : entry.requiredItems().entrySet()) {
             int required = Math.max(0, material.getValue());
-            long available = availableItemCount(controller, material.getKey().toString(), BuiltInRegistries.ITEM.get(material.getKey()));
+            long available = availableItemCount(controller, material.getKey().toString(), ForgeRegistries.ITEMS.getValue(material.getKey()));
             if (available < required) {
                 missingTypes++;
             }
@@ -152,18 +152,18 @@ final class BlueprintMaterialInspector {
             }
         }
         if (fluids.lavaBlocks() > 0) {
-            long availableLava = availableFluidBuckets(controller, Fluids.LAVA);
+            long availableLava = availableFluidBuckets(controller, FluidRegistry.LAVA);
             if (availableLava < fluids.lavaBlocks()) {
                 missingTypes++;
             }
         }
         int unsupportedTypes = unsupportedBlockLines(entry).size();
-        int percent = (int) Mth.clamp(buildable * 100L / total, 0L, 100L);
+        int percent = clampPercent(buildable * 100L / total);
         return new BuildStats(percent, (int) Math.min(buildable, total), total, missingTypes, unsupportedTypes, missingBlockTypes);
     }
 
     static boolean hasEnoughMaterials(BlueprintEntry entry, ClientRtsController controller) {
-        if (entry == null || !entry.error().isBlank() || controller == null) {
+        if (entry == null || !entry.error().trim().isEmpty() || controller == null) {
             return false;
         }
         if (!entry.missingBlueprintBlocks().isEmpty()) {
@@ -176,7 +176,7 @@ final class BlueprintMaterialInspector {
             return false;
         }
         for (Map.Entry<ResourceLocation, Integer> material : entry.requiredItems().entrySet()) {
-            if (availableItemCount(controller, material.getKey().toString(), BuiltInRegistries.ITEM.get(material.getKey()))
+            if (availableItemCount(controller, material.getKey().toString(), ForgeRegistries.ITEMS.getValue(material.getKey()))
                     < material.getValue()) {
                 return false;
             }
@@ -185,7 +185,7 @@ final class BlueprintMaterialInspector {
         if (fluids.waterBlocks() > 0 && availableWaterBuckets(controller) < WATER_BUCKET_THRESHOLD) {
             return false;
         }
-        if (fluids.lavaBlocks() > 0 && availableFluidBuckets(controller, Fluids.LAVA) < fluids.lavaBlocks()) {
+        if (fluids.lavaBlocks() > 0 && availableFluidBuckets(controller, FluidRegistry.LAVA) < fluids.lavaBlocks()) {
             return false;
         }
         return true;
@@ -197,24 +197,24 @@ final class BlueprintMaterialInspector {
         }
         Map<ResourceLocation, Long> remainingItems = new LinkedHashMap<>();
         for (ResourceLocation id : entry.requiredItems().keySet()) {
-            if (id != null && BuiltInRegistries.ITEM.containsKey(id)) {
-                remainingItems.put(id, availableItemCount(controller, id.toString(), BuiltInRegistries.ITEM.get(id)));
+            if (id != null && ForgeRegistries.ITEMS.containsKey(id)) {
+                remainingItems.put(id, availableItemCount(controller, id.toString(), ForgeRegistries.ITEMS.getValue(id)));
             }
         }
         boolean waterReady = availableWaterBuckets(controller) >= WATER_BUCKET_THRESHOLD;
-        long remainingLava = availableFluidBuckets(controller, Fluids.LAVA);
+        long remainingLava = availableFluidBuckets(controller, FluidRegistry.LAVA);
         long buildable = 0L;
-        for (var block : entry.blueprint().blocks()) {
+        for (RtsBlueprintBlock block : entry.blueprint().blocks()) {
             if (block == null || block.isMissingBlock() || block.state() == null) {
                 continue;
             }
-            if (block.state().getFluidState().is(FluidTags.WATER)) {
+            if (block.state().getMaterial() == Material.WATER) {
                 if (waterReady) {
                     buildable++;
                 }
                 continue;
             }
-            if (block.state().getFluidState().is(FluidTags.LAVA)) {
+            if (block.state().getMaterial() == Material.LAVA) {
                 if (remainingLava > 0L) {
                     remainingLava--;
                     buildable++;
@@ -244,7 +244,7 @@ final class BlueprintMaterialInspector {
     }
 
     static boolean isCreativePlayer() {
-        return Minecraft.getInstance().player != null && Minecraft.getInstance().player.isCreative();
+        return Minecraft.getMinecraft().player != null && Minecraft.getMinecraft().player.capabilities.isCreativeMode;
     }
 
     private static int missingBlueprintBlockCount(BlueprintEntry entry) {
@@ -260,12 +260,12 @@ final class BlueprintMaterialInspector {
 
     private static Map<String, Integer> missingModCounts(BlueprintEntry entry) {
         if (entry == null || entry.missingBlueprintBlocks().isEmpty()) {
-            return Map.of();
+            return Collections.emptyMap();
         }
         Map<String, Integer> out = new java.util.LinkedHashMap<>();
         for (Map.Entry<String, Integer> missing : entry.missingBlueprintBlocks().entrySet()) {
             String namespace = namespaceOf(missing.getKey());
-            if (namespace.isBlank() || "minecraft".equals(namespace)) {
+            if (namespace.trim().isEmpty() || "minecraft".equals(namespace)) {
                 continue;
             }
             out.merge(namespace, Math.max(0, missing.getValue()), Integer::sum);
@@ -279,15 +279,15 @@ final class BlueprintMaterialInspector {
             long available = displayAvailable(availableWaterBuckets(controller), WATER_BUCKET_THRESHOLD);
             out.add(new MaterialLine(
                     new ItemStack(Items.WATER_BUCKET),
-                    new ItemStack(Items.WATER_BUCKET).getHoverName().getString(),
+                    new ItemStack(Items.WATER_BUCKET).getDisplayName(),
                     available,
                     WATER_BUCKET_THRESHOLD));
         }
         if (fluids.lavaBlocks() > 0) {
-            long available = availableFluidBuckets(controller, Fluids.LAVA);
+            long available = availableFluidBuckets(controller, FluidRegistry.LAVA);
             out.add(new MaterialLine(
                     new ItemStack(Items.LAVA_BUCKET),
-                    new ItemStack(Items.LAVA_BUCKET).getHoverName().getString(),
+                    new ItemStack(Items.LAVA_BUCKET).getDisplayName(),
                     displayAvailable(available, fluids.lavaBlocks()),
                     fluids.lavaBlocks()));
         }
@@ -298,9 +298,9 @@ final class BlueprintMaterialInspector {
             return Long.MAX_VALUE;
         }
         long total = controller == null ? 0L : controller.getStorageTotalCount(itemId);
-        Minecraft minecraft = Minecraft.getInstance();
+        Minecraft minecraft = Minecraft.getMinecraft();
         if (minecraft.player != null && item != null && item != Items.AIR) {
-            for (ItemStack stack : minecraft.player.getInventory().items) {
+            for (ItemStack stack : minecraft.player.inventory.mainInventory) {
                 if (!stack.isEmpty() && stack.getItem() == item) {
                     total = saturatedAdd(total, stack.getCount());
                 }
@@ -313,8 +313,9 @@ final class BlueprintMaterialInspector {
         if (isCreativePlayer()) {
             return WATER_BUCKET_THRESHOLD;
         }
-        long bucketItems = availableItemCount(controller, BuiltInRegistries.ITEM.getKey(Items.WATER_BUCKET).toString(), Items.WATER_BUCKET);
-        long storedFluidBuckets = availableFluidBuckets(controller, Fluids.WATER);
+        ResourceLocation bucketId = Item.REGISTRY.getNameForObject(Items.WATER_BUCKET);
+        long bucketItems = availableItemCount(controller, bucketId == null ? "minecraft:water_bucket" : bucketId.toString(), Items.WATER_BUCKET);
+        long storedFluidBuckets = availableFluidBuckets(controller, FluidRegistry.WATER);
         return saturatedAdd(bucketItems, storedFluidBuckets);
     }
 
@@ -325,17 +326,17 @@ final class BlueprintMaterialInspector {
         if (controller == null || fluid == null) {
             return 0L;
         }
-        ResourceLocation id = BuiltInRegistries.FLUID.getKey(fluid);
-        if (id == null) {
+        String id = FluidRegistry.getDefaultFluidName(fluid);
+        if (id == null || id.trim().isEmpty()) {
             return 0L;
         }
         long amount = 0L;
         for (FluidEntry entry : controller.getFluidEntries()) {
-            if (id.toString().equals(entry.fluidId())) {
+            if (id.equals(entry.fluidId())) {
                 amount = saturatedAdd(amount, entry.amount());
             }
         }
-        return amount / FluidType.BUCKET_VOLUME;
+        return amount / Fluid.BUCKET_VOLUME;
     }
 
     private static FluidRequirement fluidRequirement(BlueprintEntry entry) {
@@ -344,13 +345,13 @@ final class BlueprintMaterialInspector {
         }
         int water = 0;
         int lava = 0;
-        for (var block : entry.blueprint().blocks()) {
+        for (RtsBlueprintBlock block : entry.blueprint().blocks()) {
             if (block == null || block.isMissingBlock() || block.state() == null) {
                 continue;
             }
-            if (block.state().getFluidState().is(FluidTags.WATER)) {
+            if (block.state().getMaterial() == Material.WATER) {
                 water++;
-            } else if (block.state().getFluidState().is(FluidTags.LAVA)) {
+            } else if (block.state().getMaterial() == Material.LAVA) {
                 lava++;
             }
         }
@@ -375,33 +376,62 @@ final class BlueprintMaterialInspector {
         int colon = blockId.indexOf(':');
         return colon > 0 ? blockId.substring(0, colon) : "";
     }
+
+    private static int clampPercent(long value) {
+        return (int) Math.max(0L, Math.min(100L, value));
+    }
 }
 
-record FluidRequirement(int waterBlocks, int lavaBlocks) {
+final class FluidRequirement {
+    private final int waterBlocks;
+    private final int lavaBlocks;
     static final FluidRequirement EMPTY = new FluidRequirement(0, 0);
+    FluidRequirement(int waterBlocks, int lavaBlocks) { this.waterBlocks = waterBlocks; this.lavaBlocks = lavaBlocks; }
+    int waterBlocks() { return waterBlocks; }
+    int lavaBlocks() { return lavaBlocks; }
 }
 
-record MaterialLine(ItemStack preview, String label, long available, int required) {
+final class MaterialLine {
+    private final ItemStack preview; private final String label; private final long available; private final int required;
+    MaterialLine(ItemStack preview, String label, long available, int required) {
+        this.preview = preview; this.label = label; this.available = available; this.required = required;
+    }
+    ItemStack preview() { return preview; } String label() { return label; }
+    long available() { return available; } int required() { return required; }
 }
 
-record UnsupportedLine(String label, int count) {
+final class UnsupportedLine {
+    private final String label; private final int count;
+    UnsupportedLine(String label, int count) { this.label = label; this.count = count; }
+    String label() { return label; } int count() { return count; }
 }
 
-record MissingBlueprintBlockLine(String blockId, int count, String namespace) {
+final class MissingBlueprintBlockLine {
+    private final String blockId; private final int count; private final String namespace;
+    MissingBlueprintBlockLine(String blockId, int count, String namespace) {
+        this.blockId = blockId; this.count = count; this.namespace = namespace;
+    }
+    String blockId() { return blockId; } int count() { return count; } String namespace() { return namespace; }
 }
 
-record DetailLine(
-        ItemStack preview,
-        String label,
-        String detail,
-        BlueprintMaterialUiState.Tone tone) {
+final class DetailLine {
+    private final ItemStack preview; private final String label; private final String detail;
+    private final BlueprintMaterialUiState.Tone tone;
+    DetailLine(ItemStack preview, String label, String detail, BlueprintMaterialUiState.Tone tone) {
+        this.preview = preview; this.label = label; this.detail = detail; this.tone = tone;
+    }
+    ItemStack preview() { return preview; } String label() { return label; }
+    String detail() { return detail; } BlueprintMaterialUiState.Tone tone() { return tone; }
 }
 
-record BuildStats(
-        int percent,
-        int buildable,
-        int total,
-        int missingTypes,
-        int unsupportedTypes,
-        int missingBlockTypes) {
+final class BuildStats {
+    private final int percent; private final int buildable; private final int total;
+    private final int missingTypes; private final int unsupportedTypes; private final int missingBlockTypes;
+    BuildStats(int percent, int buildable, int total, int missingTypes, int unsupportedTypes, int missingBlockTypes) {
+        this.percent = percent; this.buildable = buildable; this.total = total; this.missingTypes = missingTypes;
+        this.unsupportedTypes = unsupportedTypes; this.missingBlockTypes = missingBlockTypes;
+    }
+    int percent() { return percent; } int buildable() { return buildable; } int total() { return total; }
+    int missingTypes() { return missingTypes; } int unsupportedTypes() { return unsupportedTypes; }
+    int missingBlockTypes() { return missingBlockTypes; }
 }
